RoyalShave - Gift wrap issue

--- a/skin/frontend/bizarre/default/css/custom.css
+++ b/skin/frontend/bizarre/default/css/custom.css
@@ -32,6 +32,10 @@
     width:100%;
 }
 
+.no-display {
+    display: none;
+}
+
 .row {
     display: table-row;
 }
